--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
-  "name": "kalkulaku",
+  "name": "Rock-Paper-Scissors",
   "version": "0.1.0",
   "private": true,
   "type": "module",
+
+
+  "engines": {
+    "node": "18.x"
+  },
+
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
